--- a/Resources/layout/activity_main.xml
+++ b/Resources/layout/activity_main.xml
@@ -19,7 +19,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Grabar"
-            android:id="btn_grabar"/>
+            android:id="@+id/btn_grabar"/>
 
         
     </LinearLayout>
@@ -33,11 +33,11 @@
         android:layout_weight="1pt"
         android:orientation="horizontal">
         <TextView
-            android:id="tv_texto"
+            android:id="@+id/tv_texto"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:height="match_parent"
-            android:layout_marginLeft="25dp">
+            android:layout_marginLeft="5dp">
         </TextView>
 
     </LinearLayout>
