--- a/Resources/layout/activity_main.xml
+++ b/Resources/layout/activity_main.xml
@@ -40,4 +40,26 @@
         </TextView>
 
     </LinearLayout>
+
+   
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:minHeight="25px"
+        android:minWidth="25px"
+        android:id="@+id/linearLayout3"
+        android:gravity="center"
+        android:orientation="vertical">
+    <ToggleButton
+            android:id="@+id/toggleButton1"
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent" />
+    <TextView
+            android:gravity="center_horizontal"
+            android:id="@+id/textView1"
+            android:layout_height="match_parent"
+            android:layout_width="match_parent"
+            android:text="..."
+            android:textAppearance="?android:attr/textAppearanceLarge" />
+    </LinearLayout>
 </LinearLayout>
