--- a/Resources/layout/activity_main.xml
+++ b/Resources/layout/activity_main.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="fill_parent"
@@ -42,28 +43,157 @@
     </LinearLayout>
 
    
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:minHeight="25px"
-        android:minWidth="25px"
-        android:id="@+id/linearLayout3"
-        android:gravity="center"
-        android:orientation="vertical">
-    <ToggleButton
-            android:id="@+id/toggleButton1"
-            android:layout_height="wrap_content"
-            android:layout_width="match_parent" />
-    <TextView
-            android:gravity="center_horizontal"
-            android:id="@+id/textView1"
-            android:layout_height="match_parent"
-            android:layout_width="match_parent"
-            android:text="..."
-            android:textAppearance="?android:attr/textAppearanceLarge" />
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+        <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="20dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp">
+
+
+                <TextView
+                    android:layout_marginTop="10dp"
+                    android:text="Bluetooth connection"
+                    android:textColor="#005293"
+                    android:textFontWeight="500"
+                    android:textSize="30dp"
+                    android:gravity="center" 
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/> 
+
+                <View
+                    android:layout_width="fill_parent"
+                    android:layout_height="2dp"
+                    android:gravity="center" 
+                    android:background="#F2F2F2"
+                    android:layout_marginRight="40dp"
+                    android:layout_marginLeft="40dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="10dp"/>
+
+
+                <TextView
+                    android:text="You are not connected to the Arduino!"
+                    android:textColor="#005293"
+                    android:textFontWeight="500"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/textView1"
+                    android:textAlignment="center"
+                    android:layout_marginLeft="50dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginRight="50dp" />
+
+
+                <View
+                    android:layout_width="fill_parent"
+                    android:layout_height="2dp"
+                    android:gravity="center" 
+                    android:background="#F2F2F2"
+                    android:layout_marginRight="40dp"
+                    android:layout_marginLeft="40dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="10dp"/>
+
+
+                <Button
+                    android:text="Connect to Arduino"
+                    android:textColor="#005293"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="3dp"
+                    android:layout_marginBottom="3dp"
+                    android:layout_marginLeft="80dp"
+                    android:layout_marginRight="80dp"
+                    android:id="@+id/button1" />
+
+                <View
+                    android:layout_width="fill_parent"
+                    android:layout_height="2dp"
+                    android:gravity="center" 
+                    android:background="#F2F2F2"
+                    android:layout_marginRight="40dp"
+                    android:layout_marginLeft="40dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="10dp"/>
+
+                <Button
+                    android:text="Disconnect from Arduino"
+                    android:layout_width="match_parent"
+                    android:textColor="#005293"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="3dp"
+                    android:layout_marginBottom="10dp"
+                    android:layout_marginLeft="80dp"
+                    android:layout_marginRight="80dp"
+                    android:id="@+id/button2" />
     </LinearLayout>
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="5dp">
+    
 
 
+    <View
+        android:layout_width="fill_parent"
+        android:layout_height="2dp"
+        android:gravity="center"   
+        android:background="#F2F2F2"
+        android:layout_marginRight="40dp"
+        android:layout_marginLeft="40dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"/> 
+
+        <SeekBar
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/seekBar1"
+            android:max="125"
+            android:progress="62"
+            android:layout_marginLeft="20.0dp"
+            android:layout_marginRight="20.0dp"
+            android:layout_marginBottom="10dp" />
+
+    </LinearLayout>
+    </ScrollView>
 
 </LinearLayout>
